crates/reinhardt-pages/tests/ui/loader/fail/generic.rs
use reinhardt_pages::loader;

#[loader]
async fn generic<T>() -> Result<T, String> {
	panic!()
}

fn main() {}
